--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </button>
           <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
             <a href=".">
-              Stop russian propaganda and bloodshed in Ukraine immediately!
+              Help us stop russian propaganda
             </a>
           </h1>
           <div class="navbar-nav flex-row order-md-last">
