feat: :sparkles: hide title on mobile

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-menu">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
+          <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3 d-none d-sm-block d-md-block">
             <a href=".">
               Help us stop russian propaganda
             </a>
